--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,24 @@ env:
 
 jobs:
   build:
-    name: Build Release
-    runs-on: macos-latest
+    name: Build (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            build_app: true
+            artifact_suffix: macos-arm64
+          - os: macos-13
+            target: x86_64-apple-darwin
+            build_app: true
+            artifact_suffix: macos-x64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            build_app: false
+            artifact_suffix: linux-x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,23 +40,43 @@ jobs:
       - name: Cache cargo registry and target
         uses: Swatinem/rust-cache@v2
         with:
-          cache-on-failure: true
+          key: ${{ matrix.target }}
 
-      - name: Build release binaries
-        run: cargo build --release --workspace
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl-dev pkg-config
+
+      - name: Build CLI
+        run: cargo build --release -p exactobar-cli
+
+      - name: Build App (macOS only)
+        if: matrix.build_app
+        run: cargo build --release -p exactobar-app
 
       - name: Prepare artifacts
         run: |
           mkdir -p artifacts
-          cp target/release/exactobar artifacts/
-          cp target/release/exactobar-app artifacts/
+          cp target/release/exactobar artifacts/exactobar-${{ matrix.artifact_suffix }}
           chmod +x artifacts/*
+
+      - name: Add App to artifacts (macOS only)
+        if: matrix.build_app
+        run: |
+          cp target/release/exactobar-app artifacts/exactobar-app-${{ matrix.artifact_suffix }}
+          chmod +x artifacts/exactobar-app-${{ matrix.artifact_suffix }}
+
+      - name: Create tarball
+        run: |
+          cd artifacts
+          tar -czvf exactobar-${{ matrix.artifact_suffix }}-${{ github.ref_name }}.tar.gz *
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: exactobar-macos
-          path: artifacts/*
+          name: exactobar-${{ matrix.artifact_suffix }}
+          path: artifacts/exactobar-${{ matrix.artifact_suffix }}-${{ github.ref_name }}.tar.gz
           retention-days: 5
 
   release:
@@ -50,22 +86,18 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Download artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: exactobar-macos
           path: artifacts
+          merge-multiple: true
 
-      - name: Create tarball
-        run: |
-          cd artifacts
-          tar -czvf exactobar-macos-${{ github.ref_name }}.tar.gz *
+      - name: List artifacts
+        run: ls -la artifacts/
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
           files: |
-            artifacts/exactobar-macos-${{ github.ref_name }}.tar.gz
-            artifacts/exactobar
-            artifacts/exactobar-app
+            artifacts/*.tar.gz
